--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mongodb": "^6.11.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
